--- a/exercicios/ex022/fundo006.css
+++ b/exercicios/ex022/fundo006.css
@@ -2,16 +2,30 @@
 
 body {
     height: 100vh;
+    /*
     background-color: black;
     background-image: url('imagens/wallpaper002.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    
+    "Shorthand background"
+    color
+    image
+    position
+    repeat
+    "[size]" - Não ta funcionando, apesar de estar escrito no manual do W3C
+    attachment
+    */
+
+    background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+    background-size: cover;
 }
 
 main {
     background-color: white;
-    width: 400px;
+    max-width: 700px;
     padding: 10px;
     margin: auto;
     border: 4px solid darkblue;
